<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <group android:id="@+id/only_menu_group">
        <item
            android:id="@+id/menu_btn_like"
            android:title="@string/app_menu_like"
            android:icon="@drawable/ic_favorite"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/menu_btn_delete"
            android:title="@string/app_menu_delete"
            android:icon="@drawable/ic_delete"
            app:showAsAction="never"/>

        <item
            android:id="@+id/menu_btn_save"
            android:title="@string/app_menu_save"
            android:icon="@drawable/ic_save"
            app:showAsAction="never|withText"/>
    </group>
</menu>